feat: add liveness analysis